# rxscan-android

./: .gitattributes  .gitignore  00_MASTER_PLAN.md  01_PRODUCT_REQUIREMENTS.md  02_SYSTEM_ARCHITECTURE.md  03_OCR_PIPELINE.md  04_DRUG_MATCHING_ENGINE.md  05_DATA_PLATFORM.md  06_LOCAL_DATA_MODEL.md  07_SECURITY_PRIVACY.md  08_UX_SPEC.md  09_TEST_QUALITY.md  10_RELEASE_COMPLIANCE.md  11_OBSERVABILITY_OPERATIONS.md  12_PROJECT_STRUCTURE.md  13_DECISIONS_AND_RISKS.md  14_SOURCE_REGISTRY.md  AGENTS.md  BUNDLE_INDEX.md  README.md  SECURITY.md  START_HERE_PROMPT.md  build.gradle.kts  gradlew.bat  pyrightconfig.json  settings.gradle.kts
adr/: ADR-001-native-android-first.md  ADR-002-no-patient-data-backend.md  ADR-003-signed-static-drug-db.md  ADR-004-fail-closed-matching.md  ADR-005-no-generative-ai-critical-path.md
checklists/: DATA_UPDATE_RUNBOOK.md  RELEASE_CHECKLIST.md  SECURITY_REVIEW_CHECKLIST.md
config/: confidence_policy.yaml  release_gates.json  source_registry.yaml  supported_scope.yaml
docs/: CORPUS_ANNOTATION.md  DEPENDENCY_POLICY.md  DEVICE_TEST_MATRIX.md  ENGINEERING_BOOTSTRAP.md  INCIDENT_AND_ROLLOUT_RUNBOOK.md  MFDS_DATA_ACCESS.md  PHARMACIST_SIGNOFF_PACKAGE.md  PLAY_DATA_SAFETY.md  PRIVACY_POLICY_DRAFT.md  (+7 more)
tools/drug-data-builder/: README.md  pyproject.toml
tools/drug-data-builder/fixtures/synthetic/: mfds_easy_drug_minimal.json
tools/drug-data-builder/src/rxscan_data/: __init__.py  __main__.py  cli.py  contracts.py  fetcher.py  mfds.py  public_db.py
tools/drug-data-builder/tests/: test_manifest_contract.py  test_mfds_fetcher.py  test_public_db.py
(+139 files in other folders)
